Add author info, sections, resume, and assets for Toha site

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -4,17 +4,33 @@ section:
   enable: true
   weight: 1
 
-name: Jason Lucas
-headline: "PhD Candidate · Multilingual NLP & AI Safety"
-subtitle: "Penn State University"
-avatar: "/images/site/main-logo.png"
-bio: |
-  Final-year PhD focused on low-resource multilingual NLP, AI safety,
+name: "Jason Lucas"
+designation: "PhD Candidate · Multilingual NLP & AI Safety"
+
+summary: |
+  Final-year PhD candidate in Informatics (Data Science & AI) at Penn State.
+  Research focuses on low-resource multilingual NLP, adversarial ML, safe AI,
   hallucination detection, and disinformation robustness.
+
+avatar: "/images/site/main-logo.png"
+
+# Works with Toha variants that look for resume file or buttons[]
+resources:
+  resume:
+    file: "/files/Jason_Lucas_Resume.pdf"
+    text: "My Resume"
+    icon: "fa-solid fa-file-pdf"
+
+buttons:
+  - name: "My Resume"
+    url: "/files/Jason_Lucas_Resume.pdf"
+    icon: "fa-solid fa-file-pdf"
+    newTab: true
+
 socialLinks:
   - icon: "fa-brands fa-github"
     url: "https://github.com/jsl5710"
   - icon: "fa-brands fa-linkedin"
-    url: "https://www.linkedin.com/in/jsl5710"
+    url: "https://www.linkedin.com/in/jslu"
   - icon: "fa-solid fa-envelope"
-    url: "mailto:<you>@psu.edu"
+    url: "mailto:jsl5710@psu.edu"
