--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -2,15 +2,53 @@ section:
   id: education
   name: Education
   enable: true
-  weight: 3
+  weight: 2
+  template: sections/education.html
 
 degrees:
-  - degree: "Ph.D., Information Sciences & Technology"
+  - name: "Ph.D. in Informatics (Data Science & AI)"
+    timeframe: "Aug 2021 – May 2026 (expected)"
     institution:
-      name: "Penn State University"
-      logo: "/images/site/psu.png"   # placeholder; replace later
-      url: "https://www.psu.edu"     # optional
-    timeframe: "2019 – 2025 (expected)"
-    details:
-      - "Low-resource multilingual NLP, AI safety"
-      - "TA: IST 402 (Applied Generative AI)"
+      name: "The Pennsylvania State University"
+      url: "https://ist.psu.edu/"
+      logo: "/images/site/psu.png"
+    grade:
+      scale: "GPA"
+      achieved: 3.91
+      outOf: 4
+    extracurricularActivities:
+      - "NSF NRT Fellow"
+      - "LinDiv Certificate (Linguistics & Language Science)"
+
+  - name: "Master of Public Health (Epidemiology)"
+    timeframe: "Jan 2018 – May 2021"
+    institution:
+      name: "St. George’s University"
+      url: "https://www.sgu.edu/"
+      logo: "/images/site/sgu.png"
+    grade:
+      scale: "GPA"
+      achieved: 3.83
+      outOf: 4
+
+  - name: "M.Sc. Computer Information Systems (Health Informatics)"
+    timeframe: "Jan 2012 – Sept 2014"
+    institution:
+      name: "Boston University"
+      url: "https://www.bu.edu/"
+      logo: "/images/site/bu.png"
+    grade:
+      scale: "GPA"
+      achieved: 3.64
+      outOf: 4
+
+  - name: "B.Sc. Information Technology"
+    timeframe: "Aug 2007 – May 2010"
+    institution:
+      name: "St. George’s University"
+      url: "https://www.sgu.edu/"
+      logo: "/images/site/sgu.png"
+    grade:
+      scale: "GPA"
+      achieved: 3.64
+      outOf: 4
