--- a/exampleSite/hugo.yaml
+++ b/exampleSite/hugo.yaml
@@ -1,12 +1,12 @@
-baseURL: http://example.org/
+baseURL: "https://jsl5710.github.io/toha/"
 languageCode: en-us
-title: Example Site
+title: "Jason Lucas"
 
 module:
   imports:
   - path: github.com/hugo-toha/toha/v4
   - path: github.com/hugo-toha/hugo-toha.github.io
-    disable: false
+    disable: true
     mounts:
     - source: content
       target: content
@@ -34,13 +34,13 @@ languages:
   en:
     languageCode: en
     languageName: English
-    title: "John's Blog"
+    title: "Jason's Blog"
     weight: 1
-  bn:
-    languageCode: bn
-    languageName: বাংলা
-    title: "জনের ব্লগ"
-    weight: 2
+  # bn:
+  #   languageCode: bn
+  #   languageName: বাংলা
+  #   title: "জনের ব্লগ"
+  #   weight: 2
 
 # default language for the content
 defaultContentLanguage: en
@@ -85,13 +85,13 @@ params:
     favicon: /images/site/favicon.png
 
   # GitHub repo of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  gitRepo: https://github.com/jsl5710/toha
   # Default branch of your Git repo
   gitBranch: main
 
   # Configure the number of section title visible in the top navbar
   topNavbar:
-    maxVisibleSections: 5
+    maxVisibleSections: 7
 
   # Configure various features of this theme
   features:
@@ -326,7 +326,7 @@ params:
     # Show/hide newsletter section in the footer. Default is "true".
     # Currently, it supports "mailchimp".
     newsletter:
-      enable: true
+      enable: false
       provider: mailchimp
       mailchimpURL: https://github.us1.list-manage.com/subscribe/post?u=19de52a4603135aae97163fd8&amp;id=094a24c76e
 
